# Chessellation

./: .prettierignore  README.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts  worker-configuration.d.ts  wrangler.json
rust-wasm/: .gitignore  Cargo.toml
rust-wasm/src/: chessellator.rs  inputs.rs  kernel.rs  lib.rs  piece.rs  spiralgrid.rs  team.rs  team_id.rs  visibility.rs
src/: app.html
src/lib/: KernelClipboard.svelte.ts  board.test.ts  input.ts  teams.test.ts  teams.ts  types.ts
src/lib/components/: Accordion.svelte  Copyable.svelte  LightSwitch.svelte  LogoLink.svelte  NavBar.svelte  Visualizer.svelte
src/lib/components/editors/: ComposeEditor.svelte  KernelEditor.svelte  MemberEditor.svelte  TeamEditor.svelte
src/lib/wasm/: chessellation.d.ts  chessellation.js  chessellation_bg.js  chessellation_bg.wasm  chessellation_bg.wasm.d.ts  package.json
src/routes/: +layout.svelte  +page.svelte  layout.css
src/routes/compose/: +page.svelte  +page.ts
src/routes/compose/run/: +page.svelte  +page.ts
src/routes/run/: +page.svelte
